Hide ReleaseBuild folder from solution

--- a/content/TemplateSonsMod/TemplateSonsMod.csproj
+++ b/content/TemplateSonsMod/TemplateSonsMod.csproj
@@ -39,6 +39,7 @@
       <None Update="manifest.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+        <None Remove="ReleaseBuild\**" />
     </ItemGroup>
 
 </Project>
